--- a/images/2017-06-10-最小二乘均值的估计模型.html
+++ b/images/2017-06-10-最小二乘均值的估计模型.html
@@ -251,7 +251,7 @@ oranges.rg1.day.lsmeans</code></pre>
 <p>进一步利用ASReml-R中的相关函数，计算day六个水平的最小二乘均值，相互验证。</p>
 <pre class="r"><code>suppressMessages(require(asreml))</code></pre>
 <pre><code>## Licensed to: YSFRI
-## Serial Number: 402568129 Expires: 30-nov-2018 (533 days)</code></pre>
+## Serial Number: 402568354 Expires: 30-nov-2017 (168 days)</code></pre>
 <pre class="r"><code>oranges.asreml &lt;-
   asreml(
     fixed = sales1 ~ -1+store + day + price1 + price2 ,
@@ -260,23 +260,23 @@ oranges.rg1.day.lsmeans</code></pre>
     data = oranges,
     maxiter = 100
   )</code></pre>
-<pre><code>## ASReml: Thu Jun 15 14:13:18 2017
+<pre><code>## ASReml: Thu Jun 15 21:52:31 2017
 ## 
 ##      LogLik         S2      DF      wall     cpu
-##     -60.6324     17.7525    23  14:13:18     0.0
-##     -60.6324     17.7525    23  14:13:18     0.0
+##     -60.6324     17.7525    23  21:52:31     0.0
+##     -60.6324     17.7525    23  21:52:31     0.0
 ## 
-## Finished on: Thu Jun 15 14:13:18 2017
+## Finished on: Thu Jun 15 21:52:31 2017
 ##  
 ## LogLikelihood Converged</code></pre>
 <pre class="r"><code>oranges.asreml.lsmeans &lt;- predict(oranges.asreml,classify = &quot;day&quot;)</code></pre>
-<pre><code>## ASReml: Thu Jun 15 14:13:20 2017
+<pre><code>## ASReml: Thu Jun 15 21:52:35 2017
 ## 
 ##      LogLik         S2      DF      wall     cpu
-##     -60.6324     17.7525    23  14:13:20     0.0
-##     -60.6324     17.7525    23  14:13:20     0.0
+##     -60.6324     17.7525    23  21:52:35     0.0
+##     -60.6324     17.7525    23  21:52:35     0.0
 ## 
-## Finished on: Thu Jun 15 14:13:20 2017
+## Finished on: Thu Jun 15 21:52:35 2017
 ##  
 ## LogLikelihood Converged</code></pre>
 <pre class="r"><code>oranges.asreml.lsmeans$predictions$pvals</code></pre>
@@ -299,6 +299,27 @@ oranges.rg1.day.lsmeans</code></pre>
 ## 5   5       15.441803       1.785808  Estimable
 ## 6   6       11.394782       1.766726  Estimable</code></pre>
 <p>从结果来看，利用lsmeans，手动汇总和asreml给出的结果都是一致的。上述结果有助于加深对于LS means的理解。</p>
+<div class="section level3">
+<h3>1.2.3 调整参考表格</h3>
+<p>在计算LS means的时候，可以考虑设置协变量的值，以及要预测的因子的水平。<br />
+譬如，我们可以设置在price1=50，price2=40以及price2=60水平上，只预测2,3,4三天的最小二乘均值。</p>
+<pre class="r"><code>org.lsm &lt;- lsmeans(oranges.lm1,&quot;day&quot;,by=&quot;price2&quot;,at=list(price1=50,price2=c(40,60),day=c(&quot;2&quot;,&quot;3&quot;,&quot;4&quot;)))
+org.lsm</code></pre>
+<pre><code>## price2 = 40:
+##  day    lsmean       SE df  lower.CL upper.CL
+##  2    6.236227 1.887106 23  2.332452 10.14000
+##  3   13.405992 2.119376 23  9.021730 17.79025
+##  4    8.483710 1.866510 23  4.622540 12.34488
+## 
+## price2 = 60:
+##  day    lsmean       SE df  lower.CL upper.CL
+##  2    9.213169 2.109448 23  4.849443 13.57689
+##  3   16.382933 1.905216 23 12.441693 20.32417
+##  4   11.460651 2.178054 23  6.955003 15.96630
+## 
+## Results are averaged over the levels of: store 
+## Confidence level used: 0.95</code></pre>
+</div>
 
 
 
