add codes for 卷积

--- a/images/2017-06-14-Rcpp-Chapter2-Notes.html
+++ b/images/2017-06-14-Rcpp-Chapter2-Notes.html
@@ -159,6 +159,94 @@ $(document).ready(function () {
 <div id="rcpp" class="section level2">
 <h2>2.4 Rcpp的首次编译</h2>
 </div>
+<div id="inline" class="section level2">
+<h2>2.5 inline</h2>
+<p>卷积好像是一种预测，对不停的信号输入，可以预测其输出。知乎上有个以复利进行解释的的例子，比较容易的理解。<a href="https://www.zhihu.com/question/22298352" class="uri">https://www.zhihu.com/question/22298352</a></p>
+<pre class="r"><code>##定义C++代码
+src &lt;- '
+Rcpp::NumericVector xa(a);
+Rcpp::NumericVector xb(b);
+int n_xa =xa.size(), n_xb = xb.size();
+
+Rcpp::NumericVector xab(n_xa + n_xb-1);
+for (int i=0; i &lt; n_xa; i++)
+  for (int j=0; j &lt; n_xb; j++)
+    xab[i+j] += xa[i] * xb[j];
+return xab;
+'
+
+###定义在R中调用的接口函数
+fun &lt;- cxxfunction(signature(a=&quot;numeric&quot;,b=&quot;numeric&quot;),
+src,plugin=&quot;Rcpp&quot;)
+
+#利用rcpp函数定义接口函数
+funrcpp &lt;-  rcpp(signature(a=&quot;numerci&quot;,b=&quot;numeric&quot;),src)
+
+##记得加载Rcpp和inline两个包，不然会找不到Rcpp调用的类型和函数
+require(Rcpp)
+require(inline)
+fun(1:4,2:5)</code></pre>
+<pre><code>## [1]  2  7 16 30 34 31 20</code></pre>
+<pre class="r"><code>funrcpp(1:4,2:5)</code></pre>
+<pre><code>## [1]  2  7 16 30 34 31 20</code></pre>
+<p>函数中添加<code>verbose=TRUE</code>参数可以显示<code>cxxfunction()</code>生成的临时文件和R CMD SHLIB触发的调用。</p>
+<pre class="r"><code>funverbose &lt;- cxxfunction(signature(a=&quot;numeric&quot;,b=&quot;numeric&quot;),
+src,plugin=&quot;Rcpp&quot;,verbose = TRUE)</code></pre>
+<pre><code>##  &gt;&gt; setting environment variables: 
+## PKG_LIBS = 
+## 
+##  &gt;&gt; LinkingTo : Rcpp
+## CLINK_CPPFLAGS =  -I&quot;C:/Users/luan_/Documents/R/win-library/3.4/Rcpp/include&quot; 
+## 
+##  &gt;&gt; Program source :
+## 
+##    1 : 
+##    2 : // includes from the plugin
+##    3 : 
+##    4 : #include &lt;Rcpp.h&gt;
+##    5 : 
+##    6 : 
+##    7 : #ifndef BEGIN_RCPP
+##    8 : #define BEGIN_RCPP
+##    9 : #endif
+##   10 : 
+##   11 : #ifndef END_RCPP
+##   12 : #define END_RCPP
+##   13 : #endif
+##   14 : 
+##   15 : using namespace Rcpp;
+##   16 : 
+##   17 : 
+##   18 : // user includes
+##   19 : 
+##   20 : 
+##   21 : // declarations
+##   22 : extern &quot;C&quot; {
+##   23 : SEXP file9864474b192a( SEXP a, SEXP b) ;
+##   24 : }
+##   25 : 
+##   26 : // definition
+##   27 : 
+##   28 : SEXP file9864474b192a( SEXP a, SEXP b ){
+##   29 : BEGIN_RCPP
+##   30 : 
+##   31 : Rcpp::NumericVector xa(a);
+##   32 : Rcpp::NumericVector xb(b);
+##   33 : int n_xa =xa.size(), n_xb = xb.size();
+##   34 : 
+##   35 : Rcpp::NumericVector xab(n_xa + n_xb-1);
+##   36 : for (int i=0; i &lt; n_xa; i++)
+##   37 :   for (int j=0; j &lt; n_xb; j++)
+##   38 :     xab[i+j] += xa[i] * xb[j];
+##   39 : return xab;
+##   40 : 
+##   41 : END_RCPP
+##   42 : }
+##   43 : 
+##   44 : 
+## Compilation argument:
+##  C:/PROGRA~1/R/R-34~1.0PA/bin/x64/R CMD SHLIB file9864474b192a.cpp 2&gt; file9864474b192a.cpp.err.txt</code></pre>
+</div>
 
 
 
