--- a/code/2017-07-20-动物育种值预测中的线性模型学习笔记1.html
+++ b/code/2017-07-20-动物育种值预测中的线性模型学习笔记1.html
@@ -139,10 +139,52 @@ y_{ij}=\mu_{i}+g_{i}+e_{ij}
 <p>模型1.2 <span class="math display">\[
 y_{ij}=\mu+g_{ai}+e^{*}_{ij}
 \]</span> 其中，<span class="math inline">\(e^{*}_{ij}\)</span>表示随机环境效应、显性和上位遗传值之和。模型1.2形式，适用于动物育种大部分育种值预测问题。通常假定y符合多变量正态分布，这其中的含义表示性状是有无数个加性基因决定，每个基因的效应是相同并且微小的，并且这些基因分布在非连锁位点上，也就是通常说的<strong>微效多基因模型</strong>（infinitesimal model）。并且，进一步假定y、g和e的方差var(y)、var(g)、var(e^{*})是已知的,并且配对个体间不存在任何相关（<span class="math inline">\(cov(e^{*},e^{*})=0\)</span>）（不是特别理解）。而且，<span class="math inline">\(\mu\)</span>代表在相同的管理组下所有个体的平均性能，例如在同一个管理系统下，相同的年龄和性别，因此假定<span class="math inline">\(\mu\)</span>也是已知的。那么问题就简单了，从模型1.2中，可以看出，预测育种值的问题，已经简化为<strong>根据剖分出的非随机环境效应调整表型观测值问题，近似等于加权动物个体和他们的亲缘个体的测定记录</strong>。</p>
-<p>根据前边的解释，个体i的育种值<span class="math inline">\(a_{i}\)</span>可以进一步剖分： <span class="math display">\[
+<p>根据前边的解释，个体i的育种值<span class="math inline">\(a_{i}\)</span>可以进一步剖分：</p>
+<p>公式1.3</p>
+<p><span class="math display">\[
 a_{i}=g_{ai}=\frac{1}{2}a_{s}+\frac{1}{2}a_{d}+m_{i}
 \]</span> 其中<span class="math inline">\(a_{s}\)</span>和<span class="math inline">\(a_{d}\)</span>分别表示父本和母本的育种值，<span class="math inline">\(m_{i}\)</span>是个体i的育种值与双亲育种值均值的偏差，也就是孟德尔抽样(Mendelian sampling)。从遗传上分析（inheritance），孟德尔抽样的本质，是由于每一个亲本仅仅从它的基因库中随机抽取了一半给它的后代（基于染色体的分离和自由组合规律，个体的一半基因，会有很多种组合）。因此，一对父母产生的后代，其基因肯定不会完全相同，他们之间存在着遗传变异。孟德尔抽样，可以理解为，个体来自双亲的加性基因的均值（父母本平均，不是基因平均）与来自双亲的所有可能后代的均值之差。</p>
 <p>在育种程序中，准确地预测育种值是非常重要的。因为在遗传改良过程中，必须要准确地选择那些真正属于高育种值的个体。根据可以用来进行选择的候选个体的类型和可以利用的信息，来决定使用何种预测育种值的方法。下一步讨论，如何利用不同的信息来源预测育种值。在许多遗传评估应用案例中，出现的PTA（predicted tranmitting ability）或者说ETA（estimated transmitting ability），通常指的是预测育种值的一半。</p>
+</div>
+<div class="section level1">
+<h1>1.3 利用动物自身性能预测育种值</h1>
+</div>
+<div class="section level1">
+<h1>1.3.1 单次记录</h1>
+<p>对于个体，当仅可获得一个表型值记录时，个体i的估计育种值计算公式为:</p>
+<p>公式1.4</p>
+<p><span class="math display">\[\hat{a}_{i} = b(y_{i}-\mu)\]</span></p>
+<p>其中b是真实育种值对表型性能的回归系数；<span class="math display">\[\mu\]</span> 是群体均值，假定<span class="math display">\[\mu\]</span>是已知的。</p>
+<p>公式1.5</p>
+<p><span class="math display">\[ b = \frac{cov(a,y)}{var(y)} = \frac{cov(a,a+e)}{var(y)} \\
+= \frac{\sigma^2_{a}}{\sigma^2_{y}} \\
+= h^2
+\]</span> 预测值等于调整后的记录值乘以遗传力。选择标准间的相关，在这个例子中是真实育种值与表型值间的相关，也称作预测的准确度。预测准确度，提供了一种评估不同选择标准的方法：相关度越高，选择标准更加适合用来预测育种值。在某些情况下，重复力（repeatability, <span class="math display">\[r^2\]</span>）也可以作为评估准确性的参数。当个体仅有一个观测值时，准确度计算公式为：</p>
+<p>公式1.6</p>
+<p><span class="math display">\[
+r_{a,y} = cov(a,y)/(\sigma_{a}\sigma_{y}) \\
+= \sigma^{2}_{a}/(\sigma_{a}\sigma_{y}) \\
+= h
+\]</span></p>
+<p>准确度为遗传力的开方。选择反应的计算公式（Falconer and Mackay, 1996）为:</p>
+<p>公式1.7</p>
+<p><span class="math display">\[
+R = ir^{2}_{a,y}\sigma_{y} = ih^{2}\sigma_{y}
+\]</span> 其中，i称作选择强度（selection intensity），以表型标准差为单位，表示选择个体超过群体均值的程度。</p>
+<p>育种值的方差（<span class="math display">\[var(\hat{a}_{i})\]</span>）表示为:</p>
+<p>公式1.8</p>
+<p><span class="math display">\[
+var(\hat{a}_{i}) = var(by) = var(h_{2}y) \\
+= h^{4}\sigma^{2}_{y} \\
+= r^{2}_{a,y}h^{2}\sigma^{2}{y} \\
+= r^{2}_{a,y}\sigma^{2}_{a}
+\]</span></p>
+<p>例1.1 一窝小母牛的一周岁体重均值为250kg，该性状的遗传力为0.45，如果其中一头小母牛周岁重320kg，请问它的育种值是多少？育种值估计的准确度是多少？</p>
+<p>根据公式1.4，育种值计算为：</p>
+<p><span class="math display">\[
+\hat{a}_{i} = 0.45*(320-250) =\]</span> 31.5kg。</p>
+<p>育种值估计的准确度(根据公式1.6计算)</p>
+<p><span class="math display">\[r_{a,y} = \]</span> 0.67。</p>
 </div>
 
 
