--- a/code/2017-07-20-动物育种值预测中的线性模型学习笔记1.html
+++ b/code/2017-07-20-动物育种值预测中的线性模型学习笔记1.html
@@ -148,9 +148,8 @@ a_{i}=g_{ai}=\frac{1}{2}a_{s}+\frac{1}{2}a_{d}+m_{i}
 </div>
 <div class="section level1">
 <h1>1.3 利用动物自身性能预测育种值</h1>
-</div>
-<div class="section level1">
-<h1>1.3.1 单次记录</h1>
+<div class="section level2">
+<h2>1.3.1 单次记录</h2>
 <p>对于个体，当仅可获得一个表型值记录时，个体i的估计育种值计算公式为:</p>
 <p>公式1.4</p>
 <p><span class="math display">\[\hat{a}_{i} = b(y_{i}-\mu)\]</span></p>
@@ -185,6 +184,17 @@ var(\hat{a}_{i}) = var(by) = var(h_{2}y) \\
 \hat{a}_{i} = 0.45*(320-250) =\]</span> 31.5kg。</p>
 <p>育种值估计的准确度(根据公式1.6计算)</p>
 <p><span class="math display">\[r_{a,y} = \]</span> 0.67。</p>
+</div>
+<div class="section level2">
+<h2>1.3.2 重复记录</h2>
+<p>个体的多次测定记录，如奶牛在哺乳期的多次产奶量，其均值可以用来预测个体的育种值。对于个体的多次测定记录，通常会存在如下假定：由于受到环境因子或者永久影响个体多次测定记录的环境的影响，多次测定记录间会存在更多的相似性（additional resemblance）。换句话说（in other words），受非遗传永久环境效应的影响，个体的多次测定记录间存在额外的协方差。</p>
+<p>个体间的方差可以进一步剖分为部分遗传的和部分环境的方差（永久环境效应，permanent environmental effect）；个体内的方差组分，是由对个体进行多次测量时的临时环境差异引起的。因此，观测值的方差可以进一步剖分为：</p>
+<p><span class="math display">\[var(y) = var(g) + var(pe) + var(te)\]</span></p>
+<p>其中<span class="math display">\[var(g)\]</span>是加性和非加性遗传方差；<span class="math display">\[var(pe)\]</span>是由永久环境效应产生的方差；<span class="math display">\[var(te)\]</span>是由随机的(random) 临时的 (temporary) 环境效应引起的方差。</p>
+<p>组内相关（<strong>组内个体间的相关</strong>），值得是个体间相关方差与表型方差的比例(the ratio of between-individual variance to phenotypic variance)</p>
+<p><span class="math display">\[t=(var(g)+var(pe))/var(y)\]</span></p>
+<p>t通常称之为重复力，用来测量个体记录间的相关。</p>
+</div>
 </div>
 
 
