--- a/code/2017-07-20-动物育种值预测中的线性模型学习笔记1.html
+++ b/code/2017-07-20-动物育种值预测中的线性模型学习笔记1.html
@@ -235,7 +235,7 @@ b = cov(a,\tilde{y})/var(\tilde{y}) \\
 <p>譬如，第一次和第二次哺乳期（lactation）产仔（calving）时的母牛年龄，会影响两次哺乳期的产奶量 （milk yield）。因此应用两次哺乳期产奶量均值，预测育种值时，必须要对这种年龄差异进行矫正。</p>
 <p>育种值的准确性用公式（1.18）表述为：</p>
 <p>公式1.18 （基于公式1.16和1.17）</p>
-<p><span class="math display">\[r_{a,y} = \frac{cov(a,\tilde{y})}{\sigma_{a}\sigma_{\tilde{y}}} \\
+<p><span class="math display">\[r_{a,\tilde{y}} = \frac{cov(a,\tilde{y})}{\sigma_{a}\sigma_{\tilde{y}}} \\
 = \frac{\sigma^{2}_{a}}{\sigma_{a}\sqrt{\sigma^{2}_{y}(t + \frac{1-t}{n})}} \\
 = \frac{\sigma_{a}}{\sqrt{\sigma^{2}_{y}(t + \frac{1-t}{n})}} \\
 = \frac{\sigma_{a}}{\sigma_{y}\sqrt{t + \frac{1-t}{n}}} \\
@@ -244,11 +244,53 @@ b = cov(a,\tilde{y})/var(\tilde{y}) \\
 = \sqrt{\frac{nh^{2}}{1+(n-1)t}} \\
 = \sqrt{b}
 \]</span></p>
-<p>与单性状的记录相比，多次记录其育种值估计的准确度更好，受重复力和测定记录次数影响。譬如假定<span class="math display">\[h^{2}\]</span>=0.3, t=0.5，当n=2,3,…,10时，育种值估计的准确度分别为</p>
-<p><span class="math display">\[r_{a,y} = \sqrt{\frac{nh^{2}}{1+(n-1)t}} \\
+<p>与单性状的记录相比，多次记录其育种值估计的准确度更好，受重复力和测定记录次数影响。育种值预测准确度的提高，主要来自于当测定记录次数增加时，测定时环境方差（个体内方差）的降低。从公示1.16就可以看出。当n不断增大时，<span class="math display">\[\sigma^{2}_{y}(t + \frac{1-t}{n})\]</span>是不断减小的。当重复力较低时，增加测定记录次数，可以显著的提高预测准确度。</p>
+<p>譬如假定<span class="math display">\[h^{2}\]</span>=0.3, t=0.5，当n=1, 2, 6, 10时，育种值估计的准确度分别为</p>
+<p>n=1</p>
+<p><span class="math display">\[r_{a,\tilde{y}} = \sqrt{\frac{nh^{2}}{1+(n-1)t}} \\
+= \sqrt{\frac{1*0.3}{1+(1-1)*0.5}} \\
+=
+\]</span> 0.55 结果等同于单次记录结果。</p>
+<p>n=2</p>
+<p><span class="math display">\[r_{a,\tilde{y}} = \sqrt{\frac{nh^{2}}{1+(n-1)t}} \\
 = \sqrt{\frac{2*0.3}{1+(2-1)*0.5}} \\
 =
-\]</span> 0.6324555</p>
+\]</span> 0.63</p>
+<p>n=6</p>
+<p><span class="math display">\[r_{a,\tilde{y}} = \sqrt{\frac{nh^{2}}{1+(n-1)t}} \\
+= \sqrt{\frac{6*0.3}{1+(6-1)*0.5}} \\
+=
+\]</span> 0.72</p>
+<p>n=10</p>
+<p><span class="math display">\[r_{a,\tilde{y}} = \sqrt{\frac{nh^{2}}{1+(n-1)t}} \\
+= \sqrt{\frac{10*0.3}{1+(10-1)*0.5}} \\
+=
+\]</span> 0.74</p>
+<p>当重复力比较高时，多次跟单次测量的准确度并无太大差别。这个其实是很朴素的道理，当重复力低时，也就是表示受环境影响较大，需要多次测量才会更加准确，但是当重复力比较高时，测量一次和多次的结果是一致的。</p>
+<p>如果重复力不同，那么基于不同重复力的育种值预测准确度结果，是没有可比性的。譬如如果t=1，那么无论n是多少，其育种值预测准确度都是h。但是如果t小于1，那么预测准确会大于h，但是不同重复率之间，应该是不可以比较的。</p>
+<p>例子1.2</p>
+<p>母牛第一次和第二次哺乳期的平均产奶总体均值是6000kg。一头母牛第一次和第二次哺乳期的平均产奶量是8000kg。产奶量的表型方差和遗传力是600kg和0.3，两次哺乳期产奶量的相关系数是0.5（重复力），预测育种值及其准确度。</p>
+<p>根据公式1.12</p>
+<p><span class="math display">\[
+\hat{a}_{1} = b(\tilde{y}_{i}-\mu) \\
+=b(8000-6000) \\
+=2000b
+\]</span></p>
+<p>其中b根据公式1.17计算 <span class="math display">\[
+b = \frac{nh^{2}}{1+(n-1)t} \\
+= \frac{2*0.3}{1+(2-1)*0.5} \\
+=
+\]</span></p>
+<p>0.4</p>
+<p>这头奶牛的育种值为：</p>
+<p><span class="math display">\[
+\hat{a}_{1} = b(\tilde{y}_{i}-\mu) \\
+=0.4*(8000-6000) \\
+=2000*0.4 \\
+=800 kg
+\]</span></p>
+<p>育种值估计的准确度为：</p>
+<p><span class="math display">\[r_{a,\tilde{y}} = \sqrt{b} = \sqrt{0.4} = 0.632\]</span></p>
 </div>
 </div>
 
