--- a/code/2017-11-09-XFA模型使用笔记.html
+++ b/code/2017-11-09-XFA模型使用笔记.html
@@ -228,7 +228,7 @@ Var(X) = AVar(F)A + Var(\varepsilon)
 <div id="xfa-extended-factor-analysis-model" class="section level2">
 <h2>1.4 XFA (eXtended Factor Analysis model)</h2>
 <p>XFA实际上是因子分析的一种扩展形式，参见<a href="https://www.vsni.co.uk/software/asreml/htmlhelp/asreml/facanal.htm">ASReml的说明文档</a>：</p>
-<p>譬如xfa1(4)表示，原始变量有4个，公共因子只有1个，载荷系数矩阵为4<em>1，特殊因子为4</em>1。 当时给ASReml作者Arthur Gilmour的邮件中也是这么理解的：</p>
+<p>譬如xfa1(4)表示，原始变量有4个，公共因子只有1个，载荷系数矩阵为4行×1列，特殊因子为4行×1列。 当时给ASReml作者Arthur Gilmour的邮件中也是这么理解的：</p>
 <p>Now I have known some about XFA and what you have write. XFA1 means that we only use the 1 common factor. I also know the number of parameters will be 8 (the first four values are for special or residual variance, the last four values are the coefficient for 1th common factor ) if I have 4 variables.</p>
 <p>在ASReml中定义方差结构时，如果需要提供先验值，以XFA1(4)为例，那么顺序是：4个特殊因子方差值；然后是载荷系数矩阵第1列（4个数，只有1列），如果是xfa2(4)，那么这里会有8个数（因为有2列）。</p>
 <p>以直接DGE和间接遗传效应IGE方差组分为例，如果有高（HD）和低（LD）2个密度，那么会存在四个变量：LD.DGE、LD.IGE HD.DGE HD.IGE，在ASReml中可以这样定义：</p>
@@ -254,7 +254,7 @@ ASReml提供了从xfa到us结构的转换方法（在VPREDICT部分）：
 </code></pre>
 <p>VPREDICT !DEFINE V Gen xfa1(4).nrm(AnimalID)</p>
 <pre><code>
-转换为us结构后的结果(10个参数，4*4下三角)：
+转换为us结构后的结果(10个参数，4行×4列下三角)：
 </code></pre>
 <p>AnimalID NRM 13176 13 Gen 0.68124 0.42820<br />
 14 Gen -0.58188 0.33805<br />
