--- a/code/2017-11-11-线型混合效应模型教程1.html
+++ b/code/2017-11-11-线型混合效应模型教程1.html
@@ -243,7 +243,8 @@ BW = 群体均值 + 雄虾的固定效应 \\
    = 33.9399 + -6.1655*1 \\
    = 27.7744
 \]</span></p>
-<p>我们随机选取一尾虾，如果是雌虾，因为截距本身设置为雌虾体重均值，因此斜率为0 <span class="math display">\[
+<p>我们随机选取一尾虾，如果是雌虾，因为截距本身设置为雌虾体重均值，因此斜率为0，雌虾的预测体重为：</p>
+<p><span class="math display">\[
 BW = 群体均值 + 雌虾的固定效应 \\
    = 33.9399 + 0*1 \\
    = 33.9399
@@ -286,13 +287,15 @@ BW = 群体均值 + 雄虾的固定效应 + T1池固定效应 \\
    = 35.4265 + -6.16*1 + 0*1 \\
    = 29.26
 \]</span> 这个数值跟Male.T1的值29.25非常接近。</p>
-<p>如果随机从T2池捞取一尾雄虾，它的预测体重为 <span class="math display">\[
+<p>如果随机从T2池捞取一尾雄虾，它的预测体重为</p>
+<p><span class="math display">\[
 BW = 群体均值 + 雄虾的固定效应 + T2池固定效应 \\
    = 35.4265 + -6.1600*1 + -2.9786*1 \\
    = 26.2879
 \]</span></p>
 <p>这个数值跟Male.T2的均值26.30非常接近。</p>
-<p>如果随机从T2池捞取一尾雌虾，它的预测体重为 <span class="math display">\[
+<p>如果随机从T2池捞取一尾雌虾，它的预测体重为</p>
+<p><span class="math display">\[
 BW = 群体均值 + 雌虾的固定效应 + T2池固定效应 \\
    = 35.4265 + 0*1 + -2.9786*1 \\
    = 32.44
